kuber-homeworks/2.3/src/app_service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: nginx-service
spec:
  ports:
    - name: nginx
      port: 80
      targetPort: 80
      protocol: TCP

    - name: multitool
      port: 11443
      protocol: TCP
      targetPort: 11443
  selector:
    app: nginx-deployment
